some stuff and some interactiveness

--- a/src/index.html
+++ b/src/index.html
@@ -3,12 +3,12 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title></title>
+        <title>SBA316</title>
 
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <div id="main"></div>
+        <div id="page"></div>
 
         <script src="index.js"></script>
     </body>
